# Interdisciplinary_Project

./: README.md  Sem6_Project_R1.pptx  pyproject.toml
src/investment_advisor/: crew.py  main.py
src/investment_advisor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/investment_advisor/config/: agents.yaml  tasks.yaml
src/investment_advisor/services/: whatsapp_sender.py
src/investment_advisor/tools/: calculator_tool.py  market_data_tool.py  news_sentiment_tool.py  risk_analyzer_tool.py
